--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   },
   "homepage": "https://github.com/MeshJS/mesh-aiken-template#readme",
   "dependencies": {
-    "@meshsdk/core": "^1.7",
+    "@meshsdk/core": "^1.8.0",
     "@meshsdk/core-csl": "^1.7",
+    "@meshsdk/react": "^1.8.0",
     "axios": "^1.7.5",
     "tsx": "^4.9.4"
   }
