--- a/frontend/bounty-frontend/package.json
+++ b/frontend/bounty-frontend/package.json
@@ -11,20 +11,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@meshsdk/core": "^1.8.0",
     "@meshsdk/react": "^1.8.0",
+    "next": "15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "15.0.3"
+    "react-router-dom": "^7.1.1",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
