--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
+    "@headlessui/react": "^2.2.0",
+    "@meshsdk/react": "^1.8.9",
+    "@neondatabase/serverless": "^0.10.4",
     "@tanstack/react-table": "^8.20.6",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
+    "next": "^15.1.4",
+    "react": "^19.0.0",
     "react-data-table-component": "^7.6.2",
+    "react-dom": "^19.0.0",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
